app/assets/stylesheets/campaigns/100m.sass
@font-face
  font-family: 'BebasNeueRegular'
  src: url('../fonts/BebasNeue-webfont.eot')
  src: url('../fonts/BebasNeue-webfont.woff') format('woff')
  src: url('../fonts/BebasNeue-webfont.ttf') format('truetype')
  src: url('../fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg')
  font-weight: normal
  font-style: normal

// ------------------------ Desktop styles

body
  background: #252A30
  color: #fff
  margin: 0
  padding: 0
  font: normal 15px arial, sans-serif

p
  margin: 0

article
  width: 960px
  margin: 0 auto


a
  color: #fecc0d


// ---- Intro

.intro-logo,
.intro-starts,
.intro-starts em
  margin: 0

.intro-logo
  background: image-url("campaigns/100m/logo.png") no-repeat center top
  overflow: hidden
  white-space: nowrap
  text-indent: 100%
  height: 48px
  margin-top: 20px

.intro-starts
  color: #FECC0E
  text-transform: uppercase
  letter-spacing: .85em
  padding-left: .85em
  font-size: 26px
  font-weight: normal
  text-align: center
  margin-top: 25px

.intro-starts em
  font-style: normal
  letter-spacing: normal
  display: block
  font: 240px 'BebasNeueRegular', arial, sans-serif
  line-height: 220px
  color: #435971
  text-align: center
  text-transform: uppercase
  margin-top: 5px

.intro-copy
  font-size: 20px
  text-align: center
  display: block
  width: 500px
  margin: 25px auto 0

.world-map
  width: 100%

// ---- Share buttons

.share-copy
  color: #FECC0D
  text-transform: uppercase
  font-size: 21px
  letter-spacing: .7em
  display: block
  text-align: center
  margin-top: 40px
  padding-left: .7em

.share-btns
  overflow: hidden

.share-fb, .share-tw, .share-em
  float: left
  margin: 30px 0 0 20px
  display: block
  padding: 14px 0
  text-align: center
  color: #fff
  text-decoration: none
  font-size: 21px
  text-shadow: 0px -2px 0px rgba(0, 0, 0, .3)
  -webkit-border-radius: 5px
  border-radius: 5px
  -webkit-box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, .3), inset 0px 3px 0px 0px rgba(255, 255, 255, .4)
  box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, .3), inset 0px 3px 0px 0px rgba(255, 255, 255, .4)
  font-weight: bold

.share-fb
  margin-left: 0
  background: #3A5998 image-url("campaigns/100m/fb.png") no-repeat 70px 10px
  padding-left: 30px
  width: 278px

.share-tw
  background: #00ACED image-url("campaigns/100m/twitter.png") no-repeat 85px 12px
  padding-left: 30px
  width: 273px

.share-em
  background: #AAAAAA image-url("campaigns/100m/email.png") no-repeat 84px 12px
  padding-left: 30px
  width: 278px

// ---- Ticker

.ticker
  margin-top: 75px
  overflow: hidden
  background: image-url("campaigns/100m/ticker-commas.png") no-repeat center 100px

.ticker-group-1,
.ticker-group-2,
.ticker-group-3
  width: 290px
  float: left
  margin-left: 45px
  display: block
  overflow: hidden

.ticker-group-1
  margin-left: 0

.ticker-1,
.ticker-2,
.ticker-3,
.ticker-4,
.ticker-5,
.ticker-6,
.ticker-7,
.ticker-8,
.ticker-9
  width: 90px
  font-size: 120px
  text-align: center
  background: image-url("campaigns/100m/ticker-boxes.png") no-repeat center 4px
  display: block
  float: left
  margin-left: 10px

.ticker-1,
.ticker-4,
.ticker-7
  margin-left: 0

.ticker-divider
  margin-top: -82px

// ---- Counter

#date_countdown
  clear: both
  margin: 110px auto 0
  overflow: hidden
  width: 663px
  color: #96999D

  .countdown_section
    float: left
    width: 165px
    display: block
    border-left: 1px solid #435971
    padding: 0
    text-align: center
    text-transform: uppercase

  .countdown_section:first-child
    border-left: none

  .countdown_amount
    font-size: 84px

// ---- Video

.video
  margin-top: 70px
  clear: both
  overflow: hidden

.video-box
  float: left
  width: 640px

.video-copy
  width: 290px
  padding-left: 30px
  font-size: 17px
  float: left

  p
    margin-bottom: 14px
    line-height: 1.8em

// ---- Footer

footer
  margin: 30px 0
  padding-top: 20px

.ad-title,
.ad-copy
  display: block
  background-color: #435971
  color: #dedede

.ad-title
  border-radius: 5px 5px 0 0
  padding: 15px 10px 3px 145px
  font-size: 18px
  font-weight: bold

.ad-copy
  border-radius: 0 0 5px 5px
  padding: 2px 10px 15px 145px
  font-size: 15px

  a
    color: #00BFFF
    text-decoration: none

.ad-img
  display: block
  margin: -83px 0 0 30px

// ------------------------- Mobile styles

@media only screen and (max-width: 600px)

  body
    background-image: none

  article
    width: auto
    margin: 0

  // ---- Intro

  .intro-logo
    background-image: cover

  .intro-starts
    letter-spacing: .85em
    padding-left: .85em
    font-size: 26px
    margin-top: 2%

  .intro-starts em
    font: 240px 'BebasNeueRegular', arial, sans-serif
    margin-top: .5%

  .intro-copy
    font-size: 20px
    width: auto
    margin: 30% auto 0

  // ---- Share buttons

  .share-copy
    font-size: 21px
    letter-spacing: .7em
    margin-top: 3%
    padding-left: .7em

  .share-fb, .share-tw, .share-em
    float: none
    margin: 3% 0 0 5%
    padding: 1% 0
    font-size: 21px
    text-shadow: 0px -2px 0px rgba(0, 0, 0, .3)

  .share-fb
    background: #3A5998 image-url("campaigns/100m/fb.png") no-repeat 70px 10px
    padding-left: 10%
    width: 20%

  .share-tw
    background: #00ACED image-url("campaigns/100m/twitter.png") no-repeat 85px 12px
    padding-left: 10%
    width: 20%

  .share-em
    background: #AAAAAA image-url("campaigns/100m/email.png") no-repeat 84px 12px
    padding-left: 10%
    width: 20%

  // ---- Ticker

  .ticker
    margin-top: 6%
    background: image-url("campaigns/100m/ticker-commas.png") no-repeat center 100px

  .ticker-group-1,
  .ticker-group-2,
  .ticker-group-3
    width: 30%
    margin-left: 5%

  .ticker-1,
  .ticker-2,
  .ticker-3,
  .ticker-4,
  .ticker-5,
  .ticker-6,
  .ticker-7,
  .ticker-8,
  .ticker-9
    width: 33%
    font-size: 20px
    background: image-url("campaigns/100m/ticker-boxes.png") no-repeat center 4px
    margin-left: .5%

  .ticker-divider
    margin-top: -10%

  // ---- Counter

  .counter
    clear: both
    margin: 15% auto 0
    width: 70%

  .counter-days,
  .counter-hrs,
  .counter-min,
  .counter-sec
    width: 25%

  .counter-days
    border-left: 0

  .counter-bigtxt
    font-size: 24px

  // ---- Video

  .video
    margin-top: 7%

  .video-box
    float: none
    width: auto

  .video-copy
    width: auto
    padding-left: 3%
    font-size: 17px
    float: none

    p
      margin-bottom: 1%
      line-height: 1.8em

  // ---- Footer

  footer
    margin: 1% 0

/* Smartphones (portrait) ----------- */
@media only screen and (max-width : 320px)

  .intro-starts
    letter-spacing: 0.60em
    font-size: 22px
    margin-top: 60px
    padding-left: 0px


    span
      width: 100%
      display: block
      text-align: center
      margin: 0 auto
      padding-left: 10px

    em
      font-size: 95px

  .intro-copy
    padding: 0px 20px
    font-size: 16px

  .share-copy
    margin: 50px 0px 30px


  .share-fb,
  .share-tw,
  .share-em
    width: 90%
    margin: 0 auto 20px
    padding: 8px 0px
    background-position: 85px 5px !important


  // ---- Counter

  #date_countdown
    clear: both
    margin: 50px auto 100px
    overflow: hidden
    width: 100%
    color: #96999D

    .countdown_section
      float: left
      width: 24%
      display: block
      border-left: 1px solid #435971
      padding: 0
      text-align: center
      text-transform: uppercase

    .countdown_section:first-child
      border-left: none

    .countdown_amount
      font-size: 34px

  .ticker
    margin-top: 60px
    background-position: 6px 40px
    background-size: 97%

  .ticker-group-1,
  .ticker-group-2,
  .ticker-group-3
    margin-left: 3%
        

  .ticker-1,
  .ticker-2,
  .ticker-3,
  .ticker-4,
  .ticker-5,
  .ticker-6,
  .ticker-7,
  .ticker-8,
  .ticker-9
    font-size: 48px

  .ticker-divider
    img
      width: 95%
      margin-left: 3%

  .video-box
    iframe
      height: 280px
      width: 90%
      margin-left: 5%

  .video-copy
    width: 90%
    font-size: 16px
    float: none
    padding: 5% 5%

  footer
    width: 90%
    padding: 0 5%
    margin: 0px 0px 40px

